--- a/girusantal_hf7/index.html
+++ b/girusantal_hf7/index.html
@@ -14,117 +14,125 @@
 <body>
     <nav>
         <ul>
+            <li class="logo">
+                <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
+            </li>
             <li>
                 <a href="index.html">Főmenü</a>
             </li>
             <li>
                 <a href="circuits.html">Pályák</a>
             </li>
-            <li><a href="">Istállók</a></li>
-            <li><a href="race-calendar.html">Versenynaptár</a></li>
+            <li>
+                <a href="teams.html">Istállók</a>
+            </li>
+            <li>
+                <a href="race-calendar.html">Versenynaptár</a>
+            </li>
         </ul>
     </nav>
     <main>
         <sidebar>
-            <span>Melyik verseny a kedvence?</span>
-            <section class="circuit-1">
-                <section class="circuit-1">
-                    <label for="circuit-1">Melbourne</label>
-                    <input type="checkbox" name="circuit-1" value="1" id="circuit-1">
+            <section class="first-question">
+                <span>Melyik verseny a kedvence?</span>
+                <section class="circuit">
+                    <section class="circuit-1">
+                        <label for="circuit-1">Melbourne</label>
+                        <input type="checkbox" name="circuit-1" value="1" id="circuit-1">
+                    </section>
+                    <section class="circuit-2">
+                        <label for="circuit-2">Sanghaj</label>
+                        <input type="checkbox" name="circuit-2" value="2" id="circuit-2">
+                    </section>
+                    <section class="circuit-3">
+                        <label for="circuit-3">Szuzuka</label>
+                        <input type="checkbox" name="circuit-3" value="3" id="circuit-3">
+                    </section>
+                    <section class="circuit-4">
+                        <label for="circuit-4">Szahír</label>
+                        <input type="checkbox" name="circuit-4" value="4" id="circuit-4">
+                    </section>
+                    <section class="circuit-5">
+                        <label for="circuit-5">Dzsidda</label>
+                        <input type="checkbox" name="circuit-5" value="5" id="circuit-5">
+                    </section>
+                    <section class="circuit-6">
+                        <label for="circuit-6">Miami</label>
+                        <input type="checkbox" name="circuit-6" value="6" id="circuit-6">
+                    </section>
+                    <section class="circuit-7">
+                        <label for="circuit-7">Imola</label>
+                        <input type="checkbox" name="circuit-7" value="7" id="circuit-7">
+                    </section>
+                    <section class="circuit-8">
+                        <label for="circuit-8">Monte-Carlo</label>
+                        <input type="checkbox" name="circuit-8" value="8" id="circuit-8">
+                    </section>
+                    <section class="circuit-9">
+                        <label for="circuit-9">Barcelona</label>
+                        <input type="checkbox" name="circuit-9" value="9" id="circuit-9">
+                    </section>
+                    <section class="circuit-10">
+                        <label for="circuit-10">Montreal</label>
+                        <input type="checkbox" name="circuit-10" value="10" id="circuit-10">
+                    </section>
+                    <section class="circuit-11">
+                        <label for="circuit-11">Spielberg</label>
+                        <input type="checkbox" name="circuit-11" value="11" id="circuit-11">
+                    </section>
+                    <section class="circuit-12">
+                        <label for="circuit-12">Silverstone</label>
+                        <input type="checkbox" name="circuit-12" value="12" id="circuit-12">
+                    </section>
+                    <section class="circuit-13">
+                        <label for="circuit-13">Spa-Francorchamps</label>
+                        <input type="checkbox" name="circuit-13" value="13" id="circuit-13">
+                    </section>
+                    <section class="circuit-14">
+                        <label for="circuit-14">Hungaroring</label>
+                        <input type="checkbox" name="circuit-14" value="14" id="circuit-14">
+                    </section>
+                    <section class="circuit-15">
+                        <label for="circuit-15">Zandvoort</label>
+                        <input type="checkbox" name="circuit-15" value="15" id="circuit-15">
+                    </section>
+                    <section class="circuit-16">
+                        <label for="circuit-16">Monza</label>
+                        <input type="checkbox" name="circuit-16" value="16" id="circuit-16">
+                    </section>
+                    <section class="circuit-17">
+                        <label for="circuit-17">Baku</label>
+                        <input type="checkbox" name="circuit-17" value="17" id="circuit-17">
+                    </section>
+                    <section class="circuit-18">
+                        <label for="circuit-18">Szingapúr</label>
+                        <input type="checkbox" name="circuit-18" value="18" id="circuit-18">
+                    </section>
+                    <section class="circuit-19">
+                        <label for="circuit-19">Austin</label>
+                        <input type="checkbox" name="circuit-19" value="19" id="circuit-19">
+                    </section>
+                    <section class="circuit-20">
+                        <label for="circuit-20">Mexikóváros</label>
+                        <input type="checkbox" name="circuit-20" value="20" id="circuit-20">
+                    </section>
+                    <section class="circuit-21">
+                        <label for="circuit-21">Interlagos</label>
+                        <input type="checkbox" name="circuit-21" value="21" id="circuit-21">
+                    </section>
+                    <section class="circuit-22">
+                        <label for="circuit-22">Las Vegas</label>
+                        <input type="checkbox" name="circuit-22" value="22" id="circuit-22">
+                    </section>
+                    <section class="circuit-23">
+                        <label for="circuit-23">Lusail</label>
+                        <input type="checkbox" name="circuit-23" value="23" id="circuit-23">
+                    </section>
+                    <section class="circuit-24">
+                        <label for="circuit-24">Abu Dhabi</label>
+                        <input type="checkbox" name="circuit-24" value="24" id="circuit-24">
+                    </section>
                 </section>
-                <section class="circuit-2">
-                    <label for="circuit-2">Sanghaj</label>
-                    <input type="checkbox" name="circuit-2" value="2" id="circuit-2">
-                </section>
-                <section class="circuit-3">
-                    <label for="circuit-3">Szuzuka</label>
-                    <input type="checkbox" name="circuit-3" value="3" id="circuit-3">
-                </section>
-                <section class="circuit-4">
-                    <label for="circuit-4">Szahír</label>
-                    <input type="checkbox" name="circuit-4" value="4" id="circuit-4">
-                </section>
-                <section class="circuit-5">
-                    <label for="circuit-5">Dzsidda</label>
-                    <input type="checkbox" name="circuit-5" value="5" id="circuit-5">
-                </section>
-                <section class="circuit-6">
-                    <label for="circuit-6">Miami</label>
-                    <input type="checkbox" name="circuit-6" value="6" id="circuit-6">
-                </section>
-                <section class="circuit-7">
-                    <label for="circuit-7">Imola</label>
-                    <input type="checkbox" name="circuit-7" value="7" id="circuit-7">
-                </section>
-                <section class="circuit-8">
-                    <label for="circuit-8">Monte-Carlo</label>
-                    <input type="checkbox" name="circuit-8" value="8" id="circuit-8">
-                </section>
-                <section class="circuit-9">
-                    <label for="circuit-9">Barcelona</label>
-                    <input type="checkbox" name="circuit-9" value="9" id="circuit-9">
-                </section>
-                <section class="circuit-10">
-                    <label for="circuit-10">Montreal</label>
-                    <input type="checkbox" name="circuit-10" value="10" id="circuit-10">
-                </section>
-                <section class="circuit-11">
-                    <label for="circuit-11">Spielberg</label>
-                    <input type="checkbox" name="circuit-11" value="11" id="circuit-11">
-                </section>
-                <section class="circuit-12">
-                    <label for="circuit-12">Silverstone</label>
-                    <input type="checkbox" name="circuit-12" value="12" id="circuit-12">
-                </section>
-                <section class="circuit-13">
-                    <label for="circuit-13">Spa-Francorchamps</label>
-                    <input type="checkbox" name="circuit-13" value="13" id="circuit-13">
-                </section>
-                <section class="circuit-14">
-                    <label for="circuit-14">Hungaroring</label>
-                    <input type="checkbox" name="circuit-14" value="14" id="circuit-14">
-                </section>
-                <section class="circuit-15">
-                    <label for="circuit-15">Zandvoort</label>
-                    <input type="checkbox" name="circuit-15" value="15" id="circuit-15">
-                </section>
-                <section class="circuit-16">
-                    <label for="circuit-16">Monza</label>
-                    <input type="checkbox" name="circuit-16" value="16" id="circuit-16">
-                </section>
-                <section class="circuit-17">
-                    <label for="circuit-17">Baku</label>
-                    <input type="checkbox" name="circuit-17" value="17" id="circuit-17">
-                </section>
-                <section class="circuit-18">
-                    <label for="circuit-18">Szingapúr</label>
-                    <input type="checkbox" name="circuit-18" value="18" id="circuit-18">
-                </section>
-                <section class="circuit-19">
-                    <label for="circuit-19">Austin</label>
-                    <input type="checkbox" name="circuit-19" value="19" id="circuit-19">
-                </section>
-                <section class="circuit-20">
-                    <label for="circuit-20">Mexikóváros</label>
-                    <input type="checkbox" name="circuit-20" value="20" id="circuit-20">
-                </section>
-                <section class="circuit-21">
-                    <label for="circuit-21">Interlagos</label>
-                    <input type="checkbox" name="circuit-21" value="21" id="circuit-21">
-                </section>
-                <section class="circuit-22">
-                    <label for="circuit-22">Las Vegas</label>
-                    <input type="checkbox" name="circuit-22" value="22" id="circuit-22">
-                </section>
-                <section class="circuit-23">
-                    <label for="circuit-23">Lusail</label>
-                    <input type="checkbox" name="circuit-23" value="23" id="circuit-23">
-                </section>
-                <section class="circuit-24">
-                    <label for="circuit-24">Abu Dhabi</label>
-                    <input type="checkbox" name="circuit-24" value="24" id="circuit-24">
-                </section>
-              
 
                 <button id="myBtn" onclick="javascript:alert('Köszönjük a szavazatát!')">Mehet</button>
 
