--- a/girusantal_hf7/circuits.html
+++ b/girusantal_hf7/circuits.html
@@ -15,14 +15,21 @@
 
     <nav>
         <ul>
+            <li class="logo">
+                <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
+            </li>
             <li>
                 <a href="index.html">Főmenü</a>
             </li>
             <li>
                 <a href="circuits.html">Pályák</a>
             </li>
-            <li><a href="">Istállók</a></li>
-            <li><a href="race-calendar.html">Versenynaptár</a></li>
+            <li>
+                <a href="teams.html">Istállók</a>
+            </li>
+            <li>
+                <a href="race-calendar.html">Versenynaptár</a>
+            </li>
         </ul>
     </nav>
 
