--- a/girusantal_hf7/index.html
+++ b/girusantal_hf7/index.html
@@ -148,39 +148,203 @@
             </section>
         </sidebar>
         <section class="section-1">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis ducimus alias consequuntur vel
-                praesentium
-                earum aut, illum quaerat voluptas eum? Reprehenderit enim quisquam consectetur accusantium repudiandae
-                fugit
-                laudantium fuga rem.
-                A dignissimos laborum sed dicta officia voluptatibus reprehenderit iusto eius porro consequatur
-                asperiores totam
-                corrupti quo, eum excepturi libero fugiat, ipsam dolores ex! Voluptatem ullam nisi enim, eum molestias
-                earum.
-                Sint quae quam exercitationem ut dicta dolorum possimus deleniti repellendus quos? Quis, quasi dolorem?
-                Ullam ut
-                iste eius ratione quo voluptatum, perspiciatis dolor veritatis, illum sequi sunt, maxime iure
-                perferendis.
-                Reiciendis id nemo soluta error ratione fugit illo temporibus minus itaque ipsam consequuntur quas
-                quisquam sit,
-                quibusdam non perferendis sed totam tempore officiis culpa omnis molestias architecto quo. Sint,
-                dignissimos!
-                Cum eligendi veniam quos quis recusandae dicta molestiae molestias tempora repellat sapiente harum,
-                reiciendis
-                exercitationem itaque corrupti. Soluta, facere praesentium cumque, unde atque eaque animi veritatis iste
-                neque
-                esse itaque.
-                Consectetur distinctio veniam dicta suscipit voluptates eum, deserunt, maxime, libero vero sed
-                inventore. Fuga
-                distinctio dicta assumenda esse impedit aliquam labore nihil voluptates vel, corrupti error. Aliquam
-                laudantium
-                vero odit.
-                Architecto nobis, accusantium optio nam modi eaque impedit nihil, laudantium unde obcaecati molestias
-                hic amet?
-                Tempora voluptatem quas dolorem unde amet? In consectetur praesentium repellat magnam consequuntur.
-                Quod, non
-                veritatis.
-            </p>
+            <h2>2024-es szezon versenyzők rangsora</h2>
+            <table class="champions-2024">
+                <tr>
+                    <th class="ch24-head">Poz.</th>
+                    <th class="ch24-head">Kép</th>
+                    <th class="ch24-head">Versenyző</th>
+                    <th class="ch24-head">Csapat lógó</th>
+                    <th class="ch24-head">Csapat</th>
+                    <th class="ch24-head">Pontok</th>
+                </tr>
+                    <td class="ch24">1.</td>
+                    <td class="ch24"><img src="./img/Max_Verstappen.webp" alt="Max Verstappen"></td>
+                    <td class="ch24">Max Verstappen</td>
+                    <td class="ch24"><img src="./img/redbull-1.png" alt="Red Bull Racing Honda RBPT"></td>
+                    <td class="ch24">Red Bull Racing Honda RBPT</td>
+                    <td class="ch24">403</td>
+                </tr>
+                <tr>
+                    <td class="ch24">2.</td>
+                    <td class="ch24"><img src="./img/norris-1.png" alt="Lando Norris"></td>
+                    <td class="ch24">Lando Norris</td>
+                    <td class="ch24"><img src="./img/mclaren-1.png" alt="McLaren Mercedes"></td>
+                    <td class="ch24">McLaren Mercedes</td>
+                    <td class="ch24">340</td>
+                </tr>
+                <tr>
+                    <td class="ch24">3.</td>
+                    <td class="ch24"><img src="./img/Leclerc.png" alt="Charles Leclerc"></td>
+                    <td class="ch24">Charles Leclerc</td>
+                    <td class="ch24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
+                    <td class="ch24">Ferrari</td>
+                    <td class="ch24">319</td>
+                </tr>
+                <tr>
+                    <td class="ch24">4.</td>
+                    <td class="ch24"><img src="./img/piastri-2.png" alt="Oscar Piastri"></td>
+                    <td class="ch24">Oscar Piastri</td>
+                    <td class="ch24"><img src="./img/mclaren-1.png" alt="McLaren Mercedes"></td>
+                    <td class="ch24">McLaren Mercedes</td>
+                    <td class="ch24">268</td>
+                </tr>
+                <tr>
+                    <td class="ch24">5.</td>
+                    <td class="ch24"><img src="./img/sainz.png" alt="Carlos Sainz"></td>
+                    <td class="ch24">Carlos Sainz</td>
+                    <td class="ch24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
+                    <td class="ch24">Ferrari</td>
+                    <td class="ch24">259</td>
+                </tr>
+                <tr>
+                    <td class="ch24">6.</td>
+                    <td class="ch24"><img src="./img/russell-1.png" alt="George Russell"></td>
+                    <td class="ch24">George Russell</td>
+                    <td class="ch24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
+                    <td class="ch24">Mercedes</td>
+                    <td class="ch24">217</td>
+                </tr>
+                <tr>
+                    <td class="ch24">7.</td>
+                    <td class="ch24"><img src="./img/hamilton-1.png" alt="Lewis Hamilton"></td>
+                    <td class="ch24">Lewis Hamilton</td>
+                    <td class="ch24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
+                    <td class="ch24">Mercedes</td>
+                    <td class="ch24">208</td>
+                </tr>
+                <tr>
+                    <td class="ch24">8.</td>
+                    <td class="ch24"><img src="./img/perez-2.png" alt="Sergio Perez"></td>
+                    <td class="ch24">Sergio Perez</td>
+                    <td class="ch24"><img src="./img/redbull-1.png" alt="Red Bull Racing Honda RBPT"></td>
+                    <td class="ch24">Red Bull Racing Honda RBPT</td>
+                    <td class="ch24">152</td>
+                </tr>
+                <tr>
+                    <td class="ch24">9.</td>
+                    <td class="ch24"><img src="./img/alonso-2.png" alt="Fernando Alonso"></td>
+                    <td class="ch24">Fernando Alonso</td>
+                    <td class="ch24"><img src="./img/aston-martin.png" alt="Aston Martin Aramco Mercedes"></td>
+                    <td class="ch24">Aston Martin Aramco Mercedes</td>
+                    <td class="ch24">62</td>
+                </tr>
+                <tr>
+                    <td class="ch24">10.</td>
+                    <td class="ch24"><img src="./img/hulkenberg-1.png" alt="Nico Hülkenberg"></td>
+                    <td class="ch24">Nico Hülkenberg</td>
+                    <td class="ch24"><img src="./img/haas-1.png" alt="Haas Ferrari"></td>
+                    <td class="ch24">Haas Ferrari</td>
+                    <td class="ch24">35</td>
+                </tr>
+                <tr>
+                    <td class="ch24">11.</td>
+                    <td class="ch24"><img src="./img/tsunoda-2.png" alt="Yuki Tsunoda"></td>
+                    <td class="ch24">Yuki Tsunoda</td>
+                    <td class="ch24"><img src="./img/visarb-1.png" alt="Visa Cash App RB"></td>
+                    <td class="ch24">Visa Cash App RB</td>
+                    <td class="ch24">30</td>
+                </tr>
+                <tr>
+                    <td class="ch24">12.</td>
+                    <td class="ch24"><img src="./img/gasly-2.png" alt="Pierre Gasly"></td>
+                    <td class="ch24">Pierre Gasly</td>
+                    <td class="ch24"><img src="./img/alpine-1.png" alt="Alpine Renault"></td>
+                    <td class="ch24">Alpine Renault</td>
+                    <td class="ch24">26</td>
+                </tr>
+                <tr>
+                    <td class="ch24">13.</td>
+                    <td class="ch24"><img src="./img/stroll-1.png" alt="Lance Stroll"></td>
+                    <td class="ch24">Lance Stroll</td>
+                    <td class="ch24"><img src="./img/aston-martin.png" alt="Aston Martin Aramco Mercedes"></td>
+                    <td class="ch24">Aston Martin Aramco Mercedes</td>
+                    <td class="ch24">24</td>
+                </tr>
+                <tr>
+                    <td class="ch24">14.</td>
+                    <td class="ch24"><img src="./img/ocon-2.png" alt="Esteban Ocon"></td>
+                    <td class="ch24">Esteban Ocon</td>
+                    <td class="ch24"><img src="./img/alpine-1.png" alt="Alpine Renault"></td>
+                    <td class="ch24">Alpine Renault</td>
+                    <td class="ch24">23</td>
+                </tr>
+                <tr>
+                    <td class="ch24">15.</td>
+                    <td class="ch24"><img src="./img/magnussen.png" alt="Kevin Magnussen"></td>
+                    <td class="ch24">Kevin Magnussen</td>
+                    <td class="ch24"><img src="./img/haas-1.png" alt="Haas Ferrari"></td>
+                    <td class="ch24">Haas Ferrari</td>
+                    <td class="ch24">14</td>
+                </tr>
+                <tr>
+                    <td class="ch24">16.</td>
+                    <td class="ch24"><img src="./img/albon.png" alt="Alex Albon"></td>
+                    <td class="ch24">Alex Albon</td>
+                    <td class="ch24"><img src="./img/williams-2.png" alt="Williams Mercedes"></td>
+                    <td class="ch24">Williams Mercedes</td>
+                    <td class="ch24">12</td>
+                </tr>
+                <tr>
+                    <td class="ch24">17.</td>
+                    <td class="ch24"><img src="./img/riccardo.png" alt="Daniel Ricciardo"></td>
+                    <td class="ch24">Daniel Ricciardo</td>
+                    <td class="ch24"><img src="./img/visarb-1.png" alt="Visa Cash App RB"></td>
+                    <td class="ch24">Visa Cash App RB</td>
+                    <td class="ch24">12</td>
+                </tr>
+                <tr>
+                    <td class="ch24">18.</td>
+                    <td class="ch24"><img src="./img/bearman-2.png" alt="Oliver Bearman"></td>
+                    <td class="ch24">Oliver Bearman</td>
+                    <td class="ch24"><img src="./img/haas-1.png" alt="Haas Ferrari"></td>
+                    <td class="ch24">Haas Ferrari</td>
+                    <td class="ch24">7</td>
+                </tr>
+                <tr>
+                    <td class="ch24">19.</td>
+                    <td class="ch24"><img src="./img/colapinto.png" alt="Franco Colapinto"></td>
+                    <td class="ch24">Franco Colapinto</td>
+                    <td class="ch24"><img src="./img/williams-2.png" alt="Williams Mercedes"></td>
+                    <td class="ch24">Williams Mercedes</td>
+                    <td class="ch24">5</td>
+                </tr>
+                <tr>
+                    <td class="ch24">20.</td>
+                    <td class="ch24"><img src="./img/lawson.png" alt="Liam Lawson"></td>
+                    <td class="ch24">Liam Lawson</td>
+                    <td class="ch24"><img src="./img/visarb-1.png" alt="Visa Cash App RB"></td>
+                    <td class="ch24">Visa Cash App RB</td>
+                    <td class="ch24">4</td>
+                </tr>
+                <tr>
+                    <td class="ch24">21.</td>
+                    <td class="ch24"><img src="./img/guanyu.png" alt="Zhou Guanyu"></td>
+                    <td class="ch24">Zhou Guanyu</td>
+                    <td class="ch24"><img src="./img/kick-sauber.png" alt="Stake F1 Team"></td>
+                    <td class="ch24">Stake F1 Team</td>
+                    <td class="ch24">0</td>
+                </tr>
+                <tr>
+                    <td class="ch24">22.</td>
+                    <td class="ch24"><img src="./img/sargeant.png" alt="Logan Sargeant"></td>
+                    <td class="ch24">Logan Sargeant</td>
+                    <td class="ch24"><img src="./img/williams-2.png" alt="Williams Mercedes"></td>
+                    <td class="ch24">Williams Mercedes</td>
+                    <td class="ch24">0</td>
+
+                </tr>
+                <tr>
+                    <td class="ch24">23.</td>
+                    <td class="ch24"><img src="./img/bottas.png" alt="Valtteri Bottas"></td>
+                    <td class="ch24">Valtteri Bottas</td>
+                    <td class="ch24"><img src="./img/kick-sauber.png" alt="Stake F1 Team"></td>
+                    <td class="ch24">Stake F1 Team</td>
+                    <td class="ch24">0</td>
+
+                </tr>
+            </table>
+
         </section>
 
         <section class="section-2">
