--- a/girusantal_hf7/teams.html
+++ b/girusantal_hf7/teams.html
@@ -74,7 +74,7 @@
         </section>
         <section class="team-6">
             <span class="team-name">Mercedes-AMG Petronas </span>
-            <img class="team-logo" src="./img/Mercedes-AMG-Petronas-F1-Team-Logo-300x300.png.webp" alt="Mercedes">
+            <img class="team-logo" src="./img/mercedes-logo.png" alt="Mercedes">
             <img class="driver-1" src="./img/antonelli-1.png" alt="Kimi Antonelli">
             <img class="driver-2" src="./img/russell-1.png" alt="George Russell">
             <span class="driver-1-name">Kimi Antonelli</span>
@@ -86,7 +86,7 @@
             <img class="driver-1" src="./img/tsunoda-2.png" alt="Yuki Tsunoda">
             <img class="driver-2" src="./img/anonymus.png" alt="Lando Norris">
             <span class="driver-1-name">Yuki Tsunoda</span>
-            <span class="driver-2-name">Lando Norris</span>
+            <span class="driver-2-name">Unknown</span>
         </section>
         <section class="team-8">
             <span class="team-name">Red Bull Racing</span>
