--- a/girusantal_hf7/race-calendar.html
+++ b/girusantal_hf7/race-calendar.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<section class=" content">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="2025. évi Forma 1 versenyek. Versenyek időpontjai. Induló csapatok, istállók. Tervezett helyszínek, verseny pályák.">
     <link rel="icon" href="icon/f1-ico.png" type="image/png">
