--- a/girusantal_hf7/index.html
+++ b/girusantal_hf7/index.html
@@ -348,39 +348,80 @@
         </section>
 
         <section class="section-2">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis ducimus alias consequuntur vel
-                praesentium
-                earum aut, illum quaerat voluptas eum? Reprehenderit enim quisquam consectetur accusantium repudiandae
-                fugit
-                laudantium fuga rem.
-                A dignissimos laborum sed dicta officia voluptatibus reprehenderit iusto eius porro consequatur
-                asperiores totam
-                corrupti quo, eum excepturi libero fugiat, ipsam dolores ex! Voluptatem ullam nisi enim, eum molestias
-                earum.
-                Sint quae quam exercitationem ut dicta dolorum possimus deleniti repellendus quos? Quis, quasi dolorem?
-                Ullam ut
-                iste eius ratione quo voluptatum, perspiciatis dolor veritatis, illum sequi sunt, maxime iure
-                perferendis.
-                Reiciendis id nemo soluta error ratione fugit illo temporibus minus itaque ipsam consequuntur quas
-                quisquam sit,
-                quibusdam non perferendis sed totam tempore officiis culpa omnis molestias architecto quo. Sint,
-                dignissimos!
-                Cum eligendi veniam quos quis recusandae dicta molestiae molestias tempora repellat sapiente harum,
-                reiciendis
-                exercitationem itaque corrupti. Soluta, facere praesentium cumque, unde atque eaque animi veritatis iste
-                neque
-                esse itaque.
-                Consectetur distinctio veniam dicta suscipit voluptates eum, deserunt, maxime, libero vero sed
-                inventore. Fuga
-                distinctio dicta assumenda esse impedit aliquam labore nihil voluptates vel, corrupti error. Aliquam
-                laudantium
-                vero odit.
-                Architecto nobis, accusantium optio nam modi eaque impedit nihil, laudantium unde obcaecati molestias
-                hic amet?
-                Tempora voluptatem quas dolorem unde amet? In consectetur praesentium repellat magnam consequuntur.
-                Quod, non
-                veritatis.
-            </p>
+    <h2>Formula 1 Csapatok és Pontok</h2>
+
+    <table class="teams-2024">
+            <tr>
+                <th>Pos</th>
+                <th>Kép</th>
+                <th>Csapat</th>
+                <th>Pontok</th>
+            </tr>
+            <tr>
+                <td class="team24">1</td>
+                <td class="team24"><img src="./img/mclaren-1.png" alt="McLaren"></td>
+                <td class="team24">McLaren Mercedes</td>
+                <td class="team24">640</td>
+            </tr>
+            <tr>
+                <td class="team24">2</td>
+                <td class="team24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
+                <td class="team24">Ferrari</td>
+                <td class="team24">619</td>
+            </tr>
+            <tr>
+                <td class="team24">3</td>
+                <td class="team24"><img src="./img/redbull-1.png" alt="Red Bull"></td>
+                <td class="team24">Red Bull Racing Honda RBPT</td>
+                <td class="team24">581</td>
+            </tr>
+            <tr>
+                <td class="team24">4</td>
+                <td class="team24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
+                <td class="team24">Mercedes</td>
+                <td class="team24">446</td>
+            </tr>
+            <tr>
+                <td class="team24">5</td>
+                <td class="team24"><img src="./img/aston-martin.png" alt="Aston Martin"></td>
+                <td class="team24">Aston Martin Aramco Mercedes</td>
+                <td class="team24">92</td>
+            </tr>
+            <tr>
+                <td class="team24">6</td>
+                <td class="team24"><img src="./img/alpine-1.png" alt="Alpine"></td>
+                <td class="team24">Alpine Renault</td>
+                <td class="team24">59</td>
+            </tr>
+            <tr>
+                <td class="team24">7</td>
+                <td class="team24"><img src="./img/haas-1.png" alt="Haas"></td>
+                <td class="team24">Haas Ferrari</td>
+                <td class="team24">54</td>
+            </tr>
+            <tr>
+                <td class="team24">8</td>
+                <td class="team24"><img src="./img/visarb-1.png" alt="RB Honda"></td>
+                <td class="team24">RB Honda RBPT</td>
+                <td class="team24">46</td>
+            </tr>
+            <tr>
+                <td class="team24">9</td>
+                <td class="team24"><img src="./img/williams-2.png" alt="Williams"></td>
+                <td class="team24">Williams Mercedes</td>
+                <td class="team24">17</td>
+            </tr>
+            <tr>
+                <td class="team24">10</td>
+                <td class="team24"><img src="./img/kick-sauber.png" alt="Sauber"></td>
+                <td class="team24">Kick Sauber Ferrari</td>
+                <td class="team24">4</td>
+            </tr>
+       </table>
+
+</body>
+</html>
+
         </section>
 
         <section class="section-3">
